Changed frontend endpoints

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -35,7 +35,7 @@
                 <h2>Original</h2>
             </div>
             <div class="row">
-                <img src="{{original_url}}"> 
+                <img [src]="original_url"> 
             </div>
         </div>
         <div class="col-md-4 col-sm-12">
@@ -43,7 +43,7 @@
                 <h2>Plate</h2>
             </div>
             <div class="row">
-                <img src="{{plate_url}}"> 
+                <img [src]="plate_url"> 
             </div>
         </div>
     </div>
